k8s/cicd/keycloak/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: microservices
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
