k8s/cicd/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: keycloak-ip
    cert-manager.io/cluster-issuer: microservices-letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: keycloak.michibaum.ch
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak-svc
  tls:
  - hosts:
    - keycloak.michibaum.ch
    secretName: keycloak.michibaum.ch
